--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </nav>
 
       <main>
-        <h1>jchakra:$<span class="cursor"></span>|</h1>
+        <h1>jchakra:$<span class="cursor">|</span></h1>
         <h3>Find me online</h3>
         <ul>
           <li>
