everything gravy for now

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="hidden">
         <div class="about-content">
-          <h2>about-me:$ <span class="cursor"></span></h2>
+          <h2>about-me:$ <span class="cursor">|</span></h2>
           <p>
             My name is Joshua, I have been designing and developing various
             projects for 6 years
@@ -47,7 +47,7 @@
         </div>
 
         <div class="contact-content">
-          <h2>contact-me:$ <span class="cursor"></span></h2>
+          <h2>contact-me:$ <span class="cursor">|</span></h2>
           <p>You can contact me via the info below</p>
           <ul>
             <li>c: 123-456-7890</li>
