updated About page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </p>
           <p>
             Some syntax in my toolkit includes HTML5, CSS3, Sass, Git,
-            JavaScript and React
+            JavaScript, Express, Node.js and React
           </p>
         </div>
 
